Mar6 at home via MAC

--- a/src/main/resources/templates/basic/link.html
+++ b/src/main/resources/templates/basic/link.html
@@ -14,6 +14,7 @@
         path variable</a></li>
     <li><a th:href="@{/hello/{param1}(param1=${param1}, param2=${param2})}">
         path variable + query parameter</a></li>
+<!--    <li><a th:href>path variable + query parameter</a></li>-->
 </ul>
 </body>
 </html>
