Mar7 at home via MAC

--- a/src/main/resources/templates/basic/operation.html
+++ b/src/main/resources/templates/basic/operation.html
@@ -15,12 +15,15 @@
     </li>
     <li>비교 연산
         <ul>
-            <li>1 > 10 = <span th:text="1 > 10"></span></li>
+            <li>1 > 10 = <span th:text="1 &gt; 10"></span></li>
             <li>1 gt 10 = <span th:text="1 gt 10"></span></li>
             <li>1 >= 10 = <span th:text="1 >= 10"></span></li>
             <li>1 ge 10 = <span th:text="1 ge 10"></span></li>
             <li>1 == 1 = <span th:text="1 == 10"></span></li>
             <li>1 != 1 = <span th:text="1 != 10"></span></li>
+
+            <li>1 < a 10 = <span th:text="1 > 10"></span></li>
+
         </ul>
     </li>
     <li>조건식
