Mar12 at work via WIN

--- a/src/main/resources/templates/basic/javascript.html
+++ b/src/main/resources/templates/basic/javascript.html
@@ -7,7 +7,7 @@
 <body>
 <!-- 자바스크립트 인라인 사용 전 -->
 <script>
-    var username = "[[${user.username}]]";
+    var username = [[${user.username}]];
     var age = [[${user.age}]];
     //자바스크립트 내추럴 템플릿
     var username2 = /*[[${user.username}]]*/ "test username";
@@ -23,5 +23,13 @@
     //객체
     var user = [[${user}]];
 </script>
+
+<!-- 자바스크립트 인라인 each -->
+<script th:inline="javascript">
+    [# th:each="user, stat : ${users}"]
+    var user[[${stat.count}]] = [[${user}]];
+    [/]
+</script>
+
 </body>
 </html>
